infrastructure/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: data-plane-config
    annotations:
      # Source: https://docs.aws.amazon.com/eks/latest/userguide/auto-configure-nlb.html
      # These are annotations that the AWS Load Balancer controller uses
      service.beta.kubernetes.io/aws-load-balancer-type: "external"
      service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
      service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0ae1d6fd77872b9bc,subnet-00c6035c4b318abe9,subnet-064374794dec95367,subnet-0d977c57b9cd22db2"
      service.beta.kubernetes.io/aws-load-balancer-name: "roland-testing-envoy-nlb"
      service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Application=roland-testing"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "roland-testing.envoy.rolandtesting.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "roland-testing.envoy.rolandtesting.com"
      allowedRoutes:
        namespaces:
          from: All
      # Source: https://gateway.envoyproxy.io/v1.4/tasks/security/tls-cert-manager/
      # Uses the cert generated by cert-manager
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            namespace: rtf
            name: letsencrypt-tls
---
# Source: https://gateway.envoyproxy.io/docs/tasks/operations/customize-envoyproxy/#customize-envoyproxy-horizontal-pod-autoscaler
# Basically, because the control-plane makes the data-plane, we have to use a custom
# envoy resource to configure the data-plane pods.
# This sets up a HorizontalPodAutoscaler on the proxy servers,
# and sets resource provisions for them.
